--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,14 @@
+2017-01-10  Martin Sebor  <msebor@redhat.com>
+
+	PR tree-optimization/78775
+	* gcc.dg/attr-alloc_size-4.c: Add test cases.
+	* gcc.dg/attr-alloc_size-10.c: New test.
+	* gcc.dg/attr-alloc_size-11.c: New test.
+	* gcc.dg/builtin-stringop-chk-7.c: New test.
+	* gcc.dg/pr78775.c: New test.
+	* gcc.dg/pr78973-2.c: New test.
+	* gcc.dg/pr78973.c: New test.
+
 2017-01-10  Jeff Law  <law@redhat.com>
 
 	PR tree-optimization/77766
