--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-11  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.c-torture/execute/20170111-1.c: New test.
+
 2017-01-11  Richard Biener  <rguenther@suse.de>
 
 	* gcc.dg/tree-ssa/pr61743-1.c: Adjust.
