--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-11  Nathan Sidwell  <nathan@acm.org>
+
+	* name-lookup.c (push_overloaded_decl_1): Refactor OVERLOAD creation.
+
 2017-01-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/78341
